--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-    "name": "scottybo/laravel-facebook-sdk",
-    "description": "Fully unit tested Facebook SDK v5 integration for Laravel 7.x",
+    "name": "local/laravel-facebook-sdk",
+    "description": "Fully unit tested Facebook SDK v5 integration for Laravel 8.x",
     "keywords": ["facebook", "laravel", "lumen", "sdk", "facebook sdk v4", "facebook sdk v5"],
-    "homepage": "https://github.com/scottybo/laravel-facebook-sdk",
+    "homepage": "https://github.com/AmityTek/laravel-facebook-sdk",
     "license": "MIT",
     "authors": [
         {
-            "name": "Scott Bowler",
-            "email": "scott@dcsdigital.co.uk",
-            "homepage": "https://www.dcsdigital.co.uk",
+            "name": "Amitytek",
+            "email": "nop@gmail.com",
+            "homepage": "https://www.github.com",
             "role": "Developer"
         }
     ],
